--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="pt-159">
             <div class="container ">
                 <div class="row">
-                    <div class="col-lg-6 col-12 d-flex flex-column lg-50 justify-content-center align-items-center">
+                    <div class="col-lg-6 col-12 d-flex flex-column lg-50 justify-content-center">
                         <div>
                             <h2 class="section_heading fs_5xl ff_poppins fw_700">Choose What Matters To Your Business &
                                 Your Customers.</h2>
@@ -288,8 +288,7 @@
                             augue. Cras ut.</p>
                     </div>
                 </div>
-            </div>
-            <div class="row pb-5">
+            
                 <div class="col-lg-4 col-md-6 col-12 mt-3">
                     <div class="box-2 px-3 py-3">
                         <div class="d-flex justify-content-between">
@@ -436,7 +435,7 @@
                             imperdiet etiam fames. Tincidunt augue risus mattis eget sem habitant id ultrices augue. Sit
                             rhoncus .</p>
                         <div class="d-flex flex-column gap-3">
-                            <div class="d-flex">
+                            <div class="d-flex gap-3">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g>
@@ -450,7 +449,7 @@
                                 </svg>
                                 <p class="m-0">Innovative website design</p>
                             </div>
-                            <div class="d-flex">
+                            <div class="d-flex gap-3">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g>
@@ -464,7 +463,7 @@
                                 </svg>
                                 <p class="m-0">Innovative website design</p>
                             </div>
-                            <div class="d-flex">
+                            <div class="d-flex gap-3">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g>
@@ -498,7 +497,7 @@
                 <h2 class="ff_poppins fs_2xl fw_600">Our Recent Project</h2>
             </div>
 
-            <ul class="p-0 d-flex align-items-center  overflow-x-scroll pt-3 pb-5 scrol-baar">
+            <ul class="p-0 d-flex align-items-center  overflow-x-scroll   pt-3 pb-5 ">
                 <li><a class="fs_lg fw_500 lite_black ff_poppins btn-border  " href="#">All</a>
                 </li>
                 <li><a class="fs_lg fw_500 ff_poppins lite_black text-nowrap btn-border" href="#">UX Design</a></li>
@@ -687,7 +686,7 @@
             </div>
             <div class="">
                 <div class="box-5 pos-a d-flex justify-content-center align-items-center">
-                    <div class="next">
+                    <div class="prev ">
                         <svg class="s_vg" width="30" height="30" viewBox="0 0 30 30" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -1088,7 +1087,7 @@
                     </div>
                 </div>
                 <div class="box-5 pos_a d-flex justify-content-center align-items-center">
-                    <div class="prev">
+                    <div class="next">
                         <svg class="s_vg" width="30" height="30" viewBox="0 0 30 30" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <g>
@@ -1145,7 +1144,7 @@
             </div>
             <div class="card-6 position-relative bg-red d-flex flex-column justify-content-center mt-120">
                 <div class="row ">
-                    <div class="col-lg-3 col-md-6 col-12">
+                    <div class="col-lg-3 col-sm-6 col-12">
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <svg width="50" height="50" viewBox="0 0 50 50" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -1176,7 +1175,7 @@
                         </div>
                         <div class="card-line"></div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-12">
+                    <div class="col-lg-3 col-sm-6 col-12">
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <svg width="50" height="50" viewBox="0 0 50 50" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -1198,7 +1197,7 @@
                             <div class="card-line-2"></div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-12">
+                    <div class="col-lg-3 col-sm-6 col-12">
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <svg width="50" height="50" viewBox="0 0 50 50" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -1240,7 +1239,7 @@
                         </div>
                         <div class="card-line-3"></div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-12">
+                    <div class="col-lg-3 col-sm-6 col-12">
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <svg width="50" height="50" viewBox="0 0 50 50" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -1537,7 +1536,7 @@
                     </div>
                     <div class="input_h bg-white">
                         <form class="d-flex align-items-center justify-content-center px-1 py-1 flex-wrap">
-                            <input class="input_ border-0" type="email" id="email" placeholder="Enter your email">
+                            <input class="input_ ps-3 border-0" type="email" id="email" placeholder="Enter your email">
                             <input class="btn_card  " id="email" type="submit" value="Subscribe Now">
                         </form>
                     </div>
@@ -1613,7 +1612,7 @@
                 </div>
             </div>
             <div class="footer_line mt-65"></div>
-            <div class="d-flex justify-content-between  flex-wrap">
+            <div class="d-flex justify-content-between ">
                 <div class="d-flex align-items-center py-2 justify-content-between flex-wrap ">
                     <div class="d-flex gap-2 pe-5 py-2">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
