all items are align

--- a/index.html
+++ b/index.html
@@ -1625,7 +1625,7 @@
 
                             </defs>
                         </svg>
-                        <p class="fs_xsm fw_400 ff_poppins white p-0 m-0">Copyright 2021. All Right Reserved By
+                        <p class="fs_xsm fw_400 d-flex align-items-center ff_poppins white p-0 m-0">Copyright 2021. All Right Reserved By
                             Ojjomedia
                         </p>
                     </div>
